Fix div alignment issues with imgs and text.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,36 @@
 .column {
   float: left;
-  align-items: center;
   width: 520px;
   height: 460px;
+  border-style: groove;
+  margin: 10px;
+  padding: 10px;
 }
 
-img {
+.column p {
+  width: 460px;
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#title{
+  text-align: center;
+  font-size: 3em;
+}
+
+.column h3 {
+  text-align: center;
+  font-size: 2em;
+}
+
+.column img {
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
   width: 400px;
   height: 275px;
   margin-bottom: -10px;
   border: solid black;
   border-radius: 50%
-}
-
-.column p {
-  width: 460px;
-}
-
-#title{
-  text-align: center;
-}
-
-.column h3 {
-  text-align: center;
 }
